Fix loading to be under the side bar on smaller devices

--- a/src/components/shared/Loading/Loading.module.scss
+++ b/src/components/shared/Loading/Loading.module.scss
@@ -6,7 +6,6 @@
   font-size: 20px;
   width: 20px;
   height: 20px;
-  z-index: -1;
   i {
     width: 9px;
     height: 9px;
