--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -10,6 +10,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    div {
+      z-index: -1;
+    }
   }
   .title {
     color: $color-black;
